--- a/style.css
+++ b/style.css
@@ -1,11 +1,46 @@
 .parent{
+  width:95%;
+padding:2%;
   display:flex;
   flex-direction: row;
 justify-content: center;
 }
 .childOne{
-  width:30%;
+  width:100%;
 padding:2%;
-border:1px solid #add;
+border:2px solid #add;
 margin:2%;
+}
+.childOne img{
+width:50%;
+padding:5%;
+border:10px solid #add;
+margin:2%;
+box-shadow: 3px 3px 3px pink;
+border-radius: 20px;
+}
+/*for small screen mobiles*/
+@media only screen and (min-width:320px) and (max-width:420px){
+  .parent{
+    width:95%;
+  padding:20%;
+    display:flex;
+    flex-direction: column;
+  justify-content: center;
+  }
+  .childOne{
+    width:95%;
+  padding:2%;
+  border:2px solid #add;
+  margin:2%;
+  }
+  .childOne img{
+  width:50%;
+  padding:5%;
+  border:10px solid #add;
+  margin:2%;
+  box-shadow: 3px 3px 3px pink;
+  border-radius: 20px;
+  }
+
 }
