--- a/style.css
+++ b/style.css
@@ -4,12 +4,14 @@ padding:2%;
 display:flex;
 flex-direction: row;
 justify-content: center;
+background-color: 123456;
 }
 .childOne{
 width:30%;
 padding:2%;
 border:2px solid #add;
 margin:2%;
+background-color: #e23456;
 }
 
 .childTwo{
@@ -17,6 +19,7 @@ margin:2%;
   padding:2%;
   border:2px solid #add;
   margin:2%;
+  background-color: d23456;
 }
 .childOne img{
 width:50%;
@@ -25,6 +28,7 @@ border:10px solid #add;
 margin:2%;
 box-shadow: 3px 3px 3px pink;
 border-radius: 20px;
+background-color: a23456;
 }
 /*for small screen mobiles*/
 
