--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ background-color: #e23456;
   padding:2%;
   border:2px solid #add;
   margin:2%;
-  background-color: d23456;
+  background-color:#d23456;
 }
 .childOne img{
 width:50%;
